tests/matrices/invalid/invalid_symmetry_matrix_array.mtx
%%MatrixMarket matrix array real symmetric
2 2
101
202
303
404
